# ChangeLog for sci-mathematics/maxima
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/maxima/ChangeLog,v 1.74 2009/12/26 16:05:56 armin76 Exp $

  26 Dec 2009; Raúl Porcel <armin76@gentoo.org> maxima-5.18.1.ebuild:
  sparc stable wrt #264649

  24 Dec 2009; Andrey Grozin <grozin@gentoo.org> maxima-5.20.1.ebuild:
  Restored ~ppc ~sparc keywords

*maxima-5.20.1 (17 Dec 2009)

  17 Dec 2009; Andrey Grozin <grozin@gentoo.org> +maxima-5.20.1.ebuild,
  +files/maxima-clozurecl.patch, metadata.xml:
  Version bump, added clozurecl as a supported lisp

  07 Oct 2009; nixnut <nixnut@gentoo.org> maxima-5.18.1.ebuild:
  ppc stable #264649

*maxima-5.19.2 (31 Aug 2009)

  31 Aug 2009; Andrey Grozin <grozin@gentoo.org> -maxima-5.19.1.ebuild,
  +maxima-5.19.2.ebuild:
  Version bump

*maxima-5.19.1 (22 Aug 2009)

  22 Aug 2009; Andrey Grozin <grozin@gentoo.org> +maxima-5.19.1.ebuild,
  +files/maxima-5.19.1-no-init-files.patch:
  Version bump; added ecl as a supported lisp

  03 Aug 2009; Markus Meier <maekke@gentoo.org> maxima-5.18.1.ebuild:
  amd64 stable, bug #264649

  21 Jul 2009; Christian Faulhammer <fauli@gentoo.org> maxima-5.18.1.ebuild:
  stable x86, bug 264649

  21 Jun 2009; Hans de Graaff <graaff@gentoo.org> maxima-5.14.0.ebuild,
  maxima-5.17.1-r1.ebuild, maxima-5.18.1.ebuild:
  Rename virtual/xemacs -> app-editors/xemacs because the virtual has been
  removed.

  30 May 2009; Ulrich Mueller <ulm@gentoo.org> maxima-5.14.0.ebuild,
  maxima-5.17.1-r1.ebuild, maxima-5.18.1.ebuild:
  Remove app-text/tetex from dependencies, bug 227443.

  20 Apr 2009; Andrey Grozin <grozin@gentoo.org> ChangeLog:
  Version bump

  01 Apr 2009; Ulrich Mueller <ulm@gentoo.org> maxima-5.17.1-r1.ebuild:
  Restore ~sparc after imaxima keywording, bug 262975.

  26 Mar 2009; Andrey Grozin <grozin@gentoo.org> maxima-5.17.1-r1.ebuild:
  ~sparc added back

*maxima-5.17.1-r1 (19 Mar 2009)
