@@ -3,13 +3,11 @@ AUX maxima-5.19.1-no-init-files.patch 2805 RMD160 c5932e0da4dcf07510fc98239137e7
 AUX maxima-clozurecl.patch 344 RMD160 721bc62c071025b3d70ea75c0fd78da4845739bf SHA1 c9d881b5bcf335b078fa47cab23bd6bfb230f1f0 SHA256 0565ba0fe102b6f7e835d2543d8e2f4a5580d588f5864918889e62bacfc8c143
 AUX maxima-no-init-files.patch 2626 RMD160 ffc34cc7e1d6ade44b100252233e83aa7e383744 SHA1 97497929054fcf6924ac56006c9c4ad28c7b443d SHA256 58b82fa1cdcc2eafc0f912541b350ae7aec8c492be5f6b0ce2174ae01f399d88
 AUX maxima-xdg-utils.patch 1090 RMD160 964f5d858b7521b5a3794705999a7fcbddd937e2 SHA1 576ff7b80737a60f71d3e5df0c2cf84161c63627 SHA256 99c600c4c7e813305da375a4afa4a5e7ea6aa4ec9f1ecc051b9c913281af53ea
-DIST maxima-5.17.1.tar.gz 20080768 RMD160 0738ddd1f8247ae0300b5810fa21db1fbfc608c3 SHA1 0f87f2fbf3c91cd54528cfc355ddf5ed30ee66ac SHA256 52c7b26c49488b7e774a2ef20684810e1d1609f48e341850054b8669ea3c96ab
 DIST maxima-5.18.1.tar.gz 20440947 RMD160 a1c0f0978ed85ba79ed9ab4e8bf50cf268f46ebf SHA1 3ed2f97d509a9a407563c097943413cf4df09ed5 SHA256 eef1f70503755ec8fb311a13731044e6fff17e6fd9534eb6bea68a12964d94bf
 DIST maxima-5.19.2.tar.gz 20572069 RMD160 648ac2033f8e7c64671d95cb0ff5f0a73c9c11bb SHA1 10b821d936fc22c16de7933d2b390adbd5e0a001 SHA256 4b9d592cb5c5b49acf10c894aa4e899bd47f079b315ee22542122a2e64589072
 DIST maxima-5.20.1.tar.gz 20655669 RMD160 eb4a277f9fdc889132292ef8daf7b7b58143152c SHA1 2e4f1de880dbbaf6f7bf01f807269951a1a3ff49 SHA256 cc2430ad6b895fb730ee2a7b8df4852c2b6d09a5a8bb715bdba783982c470bd9
-EBUILD maxima-5.17.1-r1.ebuild 4759 RMD160 7a65ae476633137d6c3df16ac2714e9080b6635a SHA1 ec69e8977eb087b608d299425ccb6f8404dbac7b SHA256 440da9375d6980ba4b5ca153ab57974771571259767615a88d11f4c700e485b4
-EBUILD maxima-5.18.1.ebuild 4233 RMD160 b73378a617f8dcacb09f0b0b181bf228cc4558db SHA1 6e64da2604e8b7a209e5bb49aaf0709f102e2757 SHA256 62b102dca5ff28e62aebba6ab44d8460d3f104322acb01976d1c31f188e75608
-EBUILD maxima-5.19.2.ebuild 4377 RMD160 08ada4981397ccc43700f1eea543325f8dc383fd SHA1 24af3274529025d23bfc7a7c948cc2adb205753c SHA256 7400b726995d848d7ed8ac1ec8aeae79e41fea2c2ad99d88aca31c4c1e38d76c
-EBUILD maxima-5.20.1.ebuild 4505 RMD160 a9d56fbc8d1439e3a6a742412520da2e6e924199 SHA1 8d8c7a5e205a0f9823f396aa2b43572661f81508 SHA256 1a9a7bd835e32213103f86c27b53b717f25993c9375c1d0ad3ceea920b99906a
-MISC ChangeLog 16629 RMD160 c3c59b1a9ae15ac3545fd2a5fa2f3a6f472df5b5 SHA1 8ed18d36080af5b322ed0244555ce30255caab3e SHA256 f8674599a0296f5b87406e03aa9681e59fffa0a5fae56bedc1cc7c596bb84ff0
+EBUILD maxima-5.18.1.ebuild 4229 RMD160 e1eef58a7ad93adeb58e36d81e03c460db5915eb SHA1 a28a9bb7521a316da74472f104b8203033685659 SHA256 37021640fe27a9176934edf8958de3ca10f1fc31d43547ca7cf883e145ddb4cf
+EBUILD maxima-5.19.2.ebuild 4374 RMD160 52661fe74c3632e7035525fb64253e7ab28c8750 SHA1 ab0f3df44345ea2a23a234b838c05d76cf2194aa SHA256 65330b02794bd45dab0c27cf36cda3a80da3373887db0e3361490787bd3b6ed1
+EBUILD maxima-5.20.1.ebuild 4502 RMD160 53d79ecb2ac08924f4e1d82a1f31cfbad1144bea SHA1 f6551587676a1612595bf9759bac889fbf691911 SHA256 a2191858840d99a3f8062f350ef44952c3f550e1f53cd5fbefddc92ce812664d
+MISC ChangeLog 16841 RMD160 c3e5ffc38614b5f2b140b6317602a361c9f7f30c SHA1 28b2fd79bd61f5679bcf34228b100b2f385bc63b SHA256 87c4241656aa0b50ae31d25d2abdd50bac0ea3966d65e5243636fdee3c1db0de
 MISC metadata.xml 1305 RMD160 f122993d0ee80a6dfdab27259d69301c609aaba0 SHA1 a647a1d994e0f0e54459c13a254d1be27eebffda SHA256 b82b31cf0892ff000778cb002578d135f119a14024ee0b4c5d206381ca3e796a
